<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditRouletteActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-2529783942153390/1147578138"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-2529783942153390/1147578138"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView2edit"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roulette_edit"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EDroulette_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView2edit" />

    <EditText
        android:id="@+id/EDroulette_name_et"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/roulette_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/EDupdate_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_style"
        android:text="@string/new_r"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/adView1edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EDcomp_name_et" />

    <Button
        android:id="@+id/EDad_comp_btn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_style"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/EDcomp_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/EDcomp_num2_et"
        app:layout_constraintTop_toTopOf="@+id/EDcomp_name_et" />

    <ImageButton
        android:id="@+id/EDura_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/key_close"
        android:scaleType="fitCenter"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/EDupdate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EDupdate_btn"
        app:layout_constraintTop_toTopOf="@+id/EDupdate_btn"
        android:importantForAccessibility="no"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/adView1edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView2edit"
        app:layout_constraintVertical_bias="0.28" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/adView1edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView2edit"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/item"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EDroulette_name_et" />

    <TextView
        android:id="@+id/EDtv_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ratio"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/EDtv_ura_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_ratio"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/EDcomp_name_et"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/comp_flame"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/EDupdate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/EDcomp_num1_et"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:background="@drawable/comp_flame"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ratio"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/EDcomp_name_et"
        app:layout_constraintEnd_toStartOf="@+id/EDcomp_num2_et"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/EDcomp_name_et"
        app:layout_constraintTop_toTopOf="@+id/EDcomp_name_et"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/EDcomp_num2_et"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:background="@drawable/comp_flame"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/second_ratio"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/EDcomp_name_et"
        app:layout_constraintEnd_toStartOf="@+id/EDad_comp_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/EDcomp_num1_et"
        app:layout_constraintTop_toTopOf="@+id/EDcomp_name_et"
        android:importantForAutofill="no"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/EDcomp_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider1" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>